--- a/spring-boot-module/src/main/resources/templates/users.html
+++ b/spring-boot-module/src/main/resources/templates/users.html
@@ -19,7 +19,7 @@
             <span th:text="${user.username}"/>
         </td>
         <td>
-            <span th:text="${user.roleName}"/>
+            <span th:text="${user.role.name}"/>
         </td>
     </tr>
 </table>
